[package]
name = "cyberbro-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for the Cyberbro threat intelligence server"
authors = []
license = "MIT"

[[bin]]
name = "cyberbro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
regex = "1"
once_cell = "1"
colored = "2"
comfy-table = "7"
indicatif = "0.17"
toml = "0.8"
dirs = "5"
dialoguer = "0.11"
